assets: position the combobox list above the input to prevent overflow
This commit ensures that when the combobox list overflows the viewport
vertically, it is automatically repositioned above the combobox input to
prevent the overflow.

Close #1098.

--- a/assets/src/components/base/Combobox/Combobox.css
+++ b/assets/src/components/base/Combobox/Combobox.css
@@ -13,10 +13,20 @@
 	top: 100%;
 	max-height: 300px;
 	transition:
-		opacity 0.5s,
-		transform 0.5s;
+		opacity 0.2s,
+		transform 0.2s;
 	z-index: 10;
 	box-shadow: var(--sl-shadow-medium);
+}
+
+.combobox-list--top {
+	top: unset;
+	bottom: var(--combobox-input-height);
+}
+
+.combobox-list--computing-position {
+	visibility: hidden !important;
+	opacity: 0 !important;
 }
 
 .combobox--open .combobox-list {
